--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <h1 class="text-uppercase text-black text-center mb-5">Resume</h1>
                 <h3 class="m-4">About me:</h3>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Diachenko Serhii Yurievich</li>
-                    <li class="list-group-item">16 september 1988 year.</li>
-                    <li class="list-group-item">Kharkiv, Moscow avenue 312,43</li>
+                    <li class="list-group-item">Diachenko Serhii</li>
+                    <li class="list-group-item">16th September 1988</li>
+                    <li class="list-group-item">312 Moskovs'kyi ave., apt. 43, Kharkiv, 61001, Ukraine</li>
                     <li class="list-group-item"><b>Contacts:</b></li>
-                    <li class="list-group-item pl-5">Telephone: <br>+38(063)51-83-181</li>
+                    <li class="list-group-item pl-5">Telephone: <br>++380 63 518 3181</li>
                     <li class="list-group-item pl-5">Email:<a href="mailto:sergeydyachenko88@gmail.com" target="_blank"><br>sergeydyachenko88@gmail.com</a></li>
                     <li class="list-group-item"></li>
                 </ul>
@@ -31,32 +31,32 @@
                     <li class="list-group-item">Graduated from courses Front-end (HTML/CSS + JS) in 2020 at <a href="https://lemon.school/">Lemon School</a></li>
                     <li class="list-group-item">Graduated from courses JavaScript in 2021 at <a href="https://sourceit.com.ua/">Source IT</a></li>
 
-                    <li class="list-group-item pl-4">In the courses I learned:</li>
-                    <li class="list-group-item pl-5 font-weight-bold">HTML 5</li>
-                    <li class="list-group-item pl-5 font-weight-bold">CSS 3</li>
+                    <li class="list-group-item pl-4">Courses passed::</li>
+                    <li class="list-group-item pl-5 font-weight-bold">HTML5</li>
+                    <li class="list-group-item pl-5 font-weight-bold">CSS3</li>
                     <li class="list-group-item pl-5 font-weight-bold">SCSS</li>
                     <li class="list-group-item pl-5 font-weight-bold">Bootstrap 3/4</li>
-                    <li class="list-group-item pl-5 font-weight-bold">JS</li>
+                    <li class="list-group-item pl-5 font-weight-bold">JavaScript</li>
                     <li class="list-group-item pl-5 font-weight-bold">Git</li>
                     <li class="list-group-item"></li>
                 </ul>
                 <h3 class="m-4">Purpose:</h3>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Further training or work Front-End developer</li>
+                    <li class="list-group-item">Further training or work as Front-End developer</li>
                     <li class="list-group-item"></li>
                 </ul>
                 <h3 class="m-4">Personal qualities and strengths:</h3>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Desire to master new technologies and tools</li>
+                    <li class="list-group-item">Organized</li>
                     <li class="list-group-item">Purposeful</li>
+                    <li class="list-group-item">Disciplined</li>
                     <li class="list-group-item">Responsible</li>
+                    <li class="list-group-item">Stress-resistant</li>
+                    <li class="list-group-item">Desire to master new technologies and tools</li>
+                    <li class="list-group-item">Able to work productively, focusing on ultimate goals</li>
                     <li class="list-group-item">I constantly work on myself</li>
                     <li class="list-group-item">I always complete tasks on time</li>
                     <li class="list-group-item">I easily find common language with people</li>
-                    <li class="list-group-item">Able to work productively, focusing on ultimate goals</li>
-                    <li class="list-group-item">Stress-resistant</li>
-                    <li class="list-group-item">Organized</li>
-                    <li class="list-group-item">Disciplined</li>
                     <li class="list-group-item"></li>
                 </ul>
                 <h3 class="m-4">Links to my work on GitHub:</h3>
