--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
                 <h3 class="m-4">Education:</h3>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Secondary-technical </li>
+                    <li class="list-group-item">А.А.Т. at Kharkiv College of the State Telecommunication University. </li>
                     <li class="list-group-item">Graduated from courses Front-end (HTML/CSS + JS) in 2020 at <a href="https://lemon.school/">Lemon School</a></li>
                     <li class="list-group-item">Graduated from courses JavaScript in 2021 at <a href="https://sourceit.com.ua/">Source IT</a></li>
 
